<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_data"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/menu_data" />

        <item
            android:id="@+id/nav_webview"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/menu_webview" />

        <item
            android:id="@+id/nav_network"
            android:icon="@android:drawable/ic_menu_upload"
            android:title="@string/menu_network" />

        <item
            android:id="@+id/nav_places"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/menu_places" />

        <item
            android:id="@+id/nav_worker"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/menu_worker" />

        <item
            android:id="@+id/nav_sensor"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/menu_sensor" />

        <item
            android:id="@+id/nav_camera"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/menu_camera" />

        <item
            android:id="@+id/nav_audio"
            android:icon="@android:drawable/ic_btn_speak_now"
            android:title="@string/menu_audio" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/nav_files"
            android:icon="@android:drawable/ic_menu_save"
            android:title="@string/menu_files" />

    </group>

</menu>